# genesis

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: config.py
notebooks/: eval.ipynb  scratch.ipynb  train.ipynb
scripts/: dummy_train.py  train.py
src/data/: dataloader.py  dataset.py  fetch.py
src/data_fetchers/: data_fetcher.py
src/factories/: writers.py
src/factories/data_fetchers/: __init__.py  kaggle_fetcher.py
src/factories/datasets/: __init__.py  animal_10.py  dummy.py
src/factories/models/: dummy.py  vanilla_vae.py
src/factories/trainers/: __init__.py  vae_vanilla.py
src/genesis/: metrics.py
src/genesis/configs/: config.py
src/genesis/data_fetchers/: base.py  data_fetcher.py
src/genesis/factories/: datasets.py  writers.py
src/genesis/models/: dummy_model.py  vanilla_autoencoder.py  vanilla_vae.py
src/genesis/trainers/: base.py  neural_net.py
src/genesis/utils/: helpers.py
src/genesis/writers/: base.py  composite.py  tensorboard.py  wandb.py
src/models/: vanilla_vae.py
src/trainers/: neural_net.py
src/writers/: composite.py  tensorboard.py  wandb.py
