[project]
name = "genesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.23.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
